[gd_scene load_steps=11 format=3 uid="uid://3f8qhpwjskou"]

[ext_resource type="Script" path="res://Entity/Joe/player.gd" id="1_dtcmd"]
[ext_resource type="Texture2D" uid="uid://dilx7idurpxb1" path="res://Entity/Joe/Walking/Joe_Walking_1.png" id="2_2fdod"]
[ext_resource type="Texture2D" uid="uid://de8gbayw7fx6m" path="res://Entity/Joe/Walking/Joe_Walking_2.png" id="3_rv4nc"]
[ext_resource type="Texture2D" uid="uid://rqjbiq0xcr2e" path="res://Entity/Joe/Walking/Joe_Walking_3.png" id="4_otci1"]
[ext_resource type="Texture2D" uid="uid://c2of6vlk3vb52" path="res://Entity/Joe/Walking/Joe_Walking_4.png" id="5_a405a"]
[ext_resource type="Texture2D" uid="uid://b7qm6g7cihcdn" path="res://Entity/Joe/Joe_Portrait.png" id="6_dnl0u"]
[ext_resource type="Texture2D" uid="uid://f1jqht5kggv5" path="res://Entity/Joe/Joe_RollTest.png" id="7_48r1k"]
[ext_resource type="PackedScene" uid="uid://dmr5wpmto3pgt" path="res://Entity/State/state_machine.tscn" id="8_6kwgr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8nnld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2fdod")
}, {
"duration": 1.0,
"texture": ExtResource("3_rv4nc")
}, {
"duration": 1.0,
"texture": ExtResource("4_otci1")
}, {
"duration": 1.0,
"texture": ExtResource("5_a405a")
}, {
"duration": 1.0,
"texture": ExtResource("2_2fdod")
}],
"loop": false,
"name": &"Moving",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_dnl0u")
}],
"loop": true,
"name": &"Portrait",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_48r1k")
}],
"loop": true,
"name": &"Rolling",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xk56d"]
height = 28.0

[node name="Player" type="Area2D"]
script = ExtResource("1_dtcmd")

[node name="Animator" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8nnld")
animation = &"Moving"

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xk56d")

[node name="RollTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="StateMachine" parent="." instance=ExtResource("8_6kwgr")]

[node name="MovePoint" type="Marker2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered" flags=18]
[connection signal="timeout" from="RollTimer" to="." method="_on_roll_timer_timeout" flags=18]
